Fix layout issue

--- a/css/blog.css
+++ b/css/blog.css
@@ -1,9 +1,9 @@
 #subject {
-	width: 706px;
+	width: 720px;
 	font-size: 20px;
 }
 
-#message {
+#text {
 	width: 720px;
 	height: 350px;
 }
